--- a/index.html
+++ b/index.html
@@ -1,33 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QuantumGAN Collider Simulator</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>QuantumGAN - Proton Collision Simulator</title>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>💥 QuantumGAN: Proton-Proton Collision Simulator</h1>
-    
-    <form id="collisionForm">
-      <label for="energyInput">Total Collision Energy (GeV):</label>
-      <input type="number" id="energyInput" min="100" max="14000" step="10" required value="13000" />
 
-      <label for="eventCount">Number of Events:</label>
-      <input type="number" id="eventCount" min="1" max="1000" value="100" />
+<header>
+  <h1>QuantumGAN — Simulating LHC Proton Collisions</h1>
+  <p>Input collision energy (TeV) & explore generated particle events</p>
+</header>
 
-      <button type="submit">Simulate Events</button>
-    </form>
+<main>
+  <section id="input-section">
+    <label for="energyInputMain">Collision Energy (TeV):</label>
+    <input type="number" id="energyInputMain" min="0.5" max="14" step="0.1" value="7" />
+    <button id="generateBtn">Simulate Collision</button>
+  </section>
 
-    <div id="results">
-      <canvas id="massChart"></canvas>
-      <canvas id="momentumChart"></canvas>
-    </div>
+  <section id="output-section">
+    <h2>Generated Particles</h2>
+    <div id="particlesList" aria-live="polite" aria-label="List of generated particles"></div>
+  </section>
+
+  <section id="analytics-section">
+    <h2>Event Analytics</h2>
+    <div id="analyticsPanel"></div>
+  </section>
+
+  <section id="detector-section">
+    <button id="openDetectorBtn">Open Faux CMS Detector</button>
+  </section>
+</main>
+
+<footer>
+  <small>© 2025 QuantumGAN by CERN-Physics AI Hybrid</small>
+</footer>
+
+<!-- Modal for detector animation -->
+<div id="detectorModal" class="modal" aria-hidden="true" role="dialog" aria-modal="true" aria-label="CMS Detector Animation">
+  <div class="modal-content">
+    <button id="closeDetectorBtn" aria-label="Close Detector Animation">&times;</button>
+    <iframe src="detector.html" title="Faux CMS Detector Animation" frameborder="0" width="100%" height="600"></iframe>
   </div>
+</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="script.js"></script>
+<script src="eastereggs.js"></script>
+<script src="analytics.js"></script>
+<script src="script.js"></script>
+
 </body>
 </html>
-
