--- a/index.html
+++ b/index.html
@@ -31,12 +31,8 @@
     </section>
 
     <section id="outputs">
-      <div id="gan-output" class="output-panel">
-        <!-- Synthetic GAN event results appear here -->
-      </div>
-      <div id="real-data-output" class="output-panel">
-        <!-- Reserved for real data or extra output -->
-      </div>
+      <div id="gan-output" class="output-panel"></div>
+      <div id="real-data-output" class="output-panel"></div>
     </section>
   </main>
 
@@ -50,5 +46,6 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
