--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
   <script src="physics.js"></script>
   <script src="gan.js"></script>
+  <script src="utils.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
