--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>🌀 LHC QuantumGAN Simulator</h1>
+  <h1> CERN Inspired LHC QuantumGAN Simulator</h1>
 
   <div id="controls">
     <select id="event-select">
