--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <button id="regenerate">🔄 Regenerate</button>
   </div>
 
-  <canvas id="collision-canvas"></canvas>
+  <canvas id="collision-canvas" width="800" height="800"></canvas>
+
 
   <script type="module" src="app.js"></script>
 </body>
