--- a/index.html
+++ b/index.html
@@ -3,28 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>LHC QuantumGAN Simulator</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>QuantumGAN - Proton Collision Simulator</title>
+  <link rel="stylesheet" href="styles.css"/>
+  <script type="module" src="script.js" defer></script>
 </head>
 <body>
-  <h1> CERN Inspired LHC QuantumGAN Simulator</h1>
+  <header>
+    <h1>QuantumGAN</h1>
+    <button id="themeToggle">🌓</button>
+  </header>
 
-  <div id="controls">
-    <select id="event-select">
-      <option value="higgs">Higgs-like</option>
-      <option value="drell-yan">Drell-Yan</option>
-      <option value="qcd">QCD Multijet</option>
-    </select>
-    <label><input type="checkbox" id="show-jets" checked /> Show Jets</label>
-    <label><input type="checkbox" id="show-muons" checked /> Show Muons</label>
-    <label><input type="checkbox" id="show-photons" checked /> Show Photons</label>
-    <label><input type="checkbox" id="show-electrons" checked /> Show Electrons</label>
-    <button id="regenerate">🔄 Regenerate</button>
-  </div>
+  <main>
+    <section id="controls">
+      <label for="energyInput">Collision Energy (GeV):</label>
+      <input type="number" id="energyInput" value="1000" min="1" />
+      <button id="simulateBtn">Simulate Collision</button>
+      <button id="nerdModeToggle">🤓 Nerd Mode</button>
+      <a href="detector.html" target="_blank">🧲 Detector View</a>
+    </section>
 
-  <canvas id="collision-canvas" width="800" height="800"></canvas>
+    <section id="logPanel">
+      <h2>Quantum Log</h2>
+      <div id="console"></div>
+    </section>
 
+    <section id="results">
+      <h2>Particles</h2>
+      <div id="particleContainer"></div>
+    </section>
+  </main>
 
-  <script type="module" src="app.js"></script>
+  <footer>
+    <p>Made with 💥 at CERN (in spirit). MIT Licensed.</p>
+  </footer>
 </body>
 </html>
+
